--- a/testfile.ipynb
+++ b/testfile.ipynb
@@ -35,6 +35,30 @@
       "7. Download to csv\n",
       "8. Exit\n"
      ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter your choice: 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  projectID projectName projectPriority  projectDuration projectComments  \\\n",
+      "0     P0001        nats            high                5                   \n",
+      "\n",
+      "  assignedToProjectTL projectStartDate projectDeadline projectOwner  \\\n",
+      "0                nats       2023-12-03      2023-12-25       pranac   \n",
+      "\n",
+      "  projectStatus taskID taskName taskPriority  taskDuration taskComments  \\\n",
+      "0   Not Started  T0001   Pranav         high             5                \n",
+      "\n",
+      "  assignedToTask taskStartDate taskDeadline   taskStatus  \n",
+      "0         pranav    2023-12-03   2023-12-25  Not Started  \n"
+     ]
     }
    ],
    "source": [
